crates/fortitude_linter/src/diagnostics/message/snapshots/fortitude_linter__diagnostics__message__gitlab__tests__output.snap
---
source: crates/fortitude_linter/src/diagnostics/message/gitlab.rs
expression: env.render_diagnostics(&diagnostics)
snapshot_kind: text
---
[
  {
    "check_name": "S201",
    "description": "S201: 'implicit none' set on the enclosing module",
    "severity": "major",
    "fingerprint": "<redacted>",
    "location": {
      "path": "test.f90",
      "positions": {
        "begin": {
          "line": 6,
          "column": 5
        },
        "end": {
          "line": 6,
          "column": 18
        }
      }
    }
  },
  {
    "check_name": "S061",
    "description": "S061: end statement should read 'end subroutine foo'",
    "severity": "major",
    "fingerprint": "<redacted>",
    "location": {
      "path": "test.f90",
      "positions": {
        "begin": {
          "line": 7,
          "column": 3
        },
        "end": {
          "line": 7,
          "column": 17
        }
      }
    }
  },
  {
    "check_name": "PORT021",
    "description": "PORT021: integer*4 is non-standard, use integer(4)",
    "severity": "major",
    "fingerprint": "<redacted>",
    "location": {
      "path": "star_kind.f90",
      "positions": {
        "begin": {
          "line": 1,
          "column": 8
        },
        "end": {
          "line": 1,
          "column": 9
        }
      }
    }
  }
]
