crates/fortitude_linter/src/diagnostics/message/snapshots/fortitude_linter__diagnostics__message__gitlab__tests__output_as_severity_warning.snap
---
source: crates/fortitude_linter/src/diagnostics/message/gitlab.rs
expression: redact_fingerprint(&content)
---
[
  {
    "description": "(S201) 'implicit none' set on the enclosing module",
    "check_name": "S201: superfluous-implicit-none",
    "severity": "major",
    "fingerprint": "<redacted>",
    "location": {
      "path": "test.f90",
      "lines": {
        "begin": 6,
        "end": 6
      }
    }
  },
  {
    "description": "(S061) end statement should read 'end subroutine foo'",
    "check_name": "S061: unnamed-end-statement",
    "severity": "major",
    "fingerprint": "<redacted>",
    "location": {
      "path": "test.f90",
      "lines": {
        "begin": 7,
        "end": 7
      }
    }
  },
  {
    "description": "(PORT021) integer*4 is non-standard, use integer(4)",
    "check_name": "PORT021: star-kind",
    "severity": "major",
    "fingerprint": "<redacted>",
    "location": {
      "path": "star_kind.f90",
      "lines": {
        "begin": 1,
        "end": 1
      }
    }
  }
]
